--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,109 @@ Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac tu
     <string name="check_email">Check Your Email</string>
     <string name="enter_code">Enter Your Code</string>
     <string name="verify">VERIFY</string>
+
+    <string name="reset_password">RESET PASSWORD</string>
+    <string name="email">Email</string>
+    <string name="new_password">New Password</string>
+    <string name="hide_password">Hide Password</string>
+    <string name="show_password">Show Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="change_password">CHANGE PASSWORD</string>
+    <string name="cancel">Cancel</string>
+    <string name="password_icon">Password Icon</string>
+    <string name="email_icon">Email Icon</string>
+    <string name="key_icon">Key Icon</string>
+    <string name="error">error</string>
+    <string name="login">LOGIN</string>
+    <string name="register">REGISTER</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="or_login_with">Or Login With</string>
+    <string name="dont_have_an_account">\"Don\'t have an account? \"</string>
+    <string name="sign_up_now">Sign Up Now!</string>
+
+    <string name="already_have_an_account">\"Already have an account? \"</string>
+    <string name="sign_in_now">Sign In Now!</string>
+    <string name="name">Name</string>
+    <string name="name_icon">Name Icon</string>
+    <string name="please_insert_email_to_reset_your_password">Please insert email to reset your password</string>
+    <string name="confirm">Confirm</string>
+    <string name="email_open">email_open</string>
+    <string name="verify_email_later">Verify email later</string>
+    <string name="resend_code">Resend Code</string>
+
+    <string name="edit">Edit</string>
+    <string name="profile_picture">Profile Picture</string>
+    <string name="member_since">\"Member Since: \"</string>
+    <string name="verify_account">Verify Account</string>
+    <string name="sign_out">Sign Out</string>
+
+    <string name="usaha">Usaha</string>
+    <string name="create_your_article">Create Your Article</string>
+    <string name="close_add_article">Close Add Article</string>
+    <string name="create">Create</string>
+    <string name="add_picture">Add Picture</string>
+    <string name="enter_title_here">Enter Title Here</string>
+    <string name="enter_body_here">Enter body here</string>
+    <string name="image_preview">Image Preview</string>
+    <string name="delete_picture">Delete Picture</string>
+
+    <string name="change_usaha">Change Usaha</string>
+    <string name="usaha_name">Usaha Name</string>
+    <string name="type">Type</string>
+    <string name="tag_one">Tag 1</string>
+    <string name="tag_two">Tag 2</string>
+    <string name="tag_three">Tag 3</string>
+    <string name="share_text">Share Text</string>
+    <string name="back">Back</string>
+    <string name="added_to_favorite">Added to favorite</string>
+    <string name="removed_from_favorite">Removed from favorite</string>
+    <string name="like">Like</string>
+    <string name="share_via">Share via</string>
+    <string name="share">Share</string>
+    <string name="article_picture">Article Picture</string>
+
+    <string name="captured_image">Captured image</string>
+    <string name="remove_image">Remove image</string>
+    <string name="use_image">Use image</string>
+    <string name="gallery">Gallery</string>
+    <string name="you_said_you_wanted_a_picture">You said you wanted a picture, so I\'m going to have to ask for permission.</string>
+    <string name="no_permission_camera_granted">No Permission Camera Granted!</string>
+    <string name="open_settings">Open Settings</string>
+    <string name="take_picture">Take Picture</string>
+    <string name="flip_camera">Flip Camera</string>
+    <string name="this_permission_is_important_for_this_app">This permission is important for this app. Please grant the permission.</string>
+    <string name="permission_request">Permission request</string>
+    <string name="ok">Ok</string>
+    <string name="you_want_to_read_from_photo_gallery">You want to read from photo gallery, so I\'m going to have to ask for permission.</string>
+    <string name="no_photo_gallery">O noes! No Photo Gallery!</string>
+    <string name="use_camera">Use Camera</string>
+    <string name="profile">Profile</string>
+    <string name="edit_profile_picture">Edit Profile Picture</string>
+    <string name="account_id">Account Id</string>
+    <string name="save_change">Save Change</string>
+
+    <string name="connecting">Connecting</string>
+    <string name="clear_cache">Clear Cache</string>
+    <string name="text_message">Text Message</string>
+    <string name="send">Send</string>
+    <string name="bot">Bot</string>
+    <string name="online">Online</string>
+
+    <string name="search">Search</string>
+    <string name="search_icon">Search Icon</string>
+    <string name="close">close</string>
+    <string name="history_icon">History Icon</string>
+    <string name="your_favorite_page">Your Favorite Page</string>
+    <string name="image_account">Image Account</string>
+    <string name="username">Username</string>
+    <string name="a_few_minutes_ago">a few minutes ago</string>
+    <string name="category">Category</string>
+    <string name="recommendation_articles">Recommendation Articles</string>
+    <string name="chat_with_your_ai_mentor">Chat With Your AI Mentor!</string>
+    <string name="send_a_message">Send a Message</string>
+    <string name="articles">Articles</string>
+    <string name="types">Types</string>
+
+
 </resources>
