--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@ Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac tu
     <string name="types">Types</string>
 
 
+    <string name="your_articles">Your Articles</string>
 </resources>
